@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.5 2004/04/22 23:45:54 minskim Exp $
+# $NetBSD: Makefile,v 1.6 2004/04/24 15:44:19 minskim Exp $
 #
 
-DISTNAME=		mathomatic-11.0c
-PKGREVISION=		1
+DISTNAME=		mathomatic-11.0d
 CATEGORIES=		math
 MASTER_SITES=		http://www.panix.com/~gesslein/
 EXTRACT_SUFX=		.tgz
